# CPrimerPlus6E_code

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Ch01/practice/: practice_1_7.c
Ch04/: varwid.c
Ch04/practice/: practice_4_7_3.c
SolutionCode/: CMakeLists.txt  main.c
solution/Ch17/: tree.c_ex_08_.c  tree.h_ex_08_.h
src/Ch04/practice/: practice_4_8_1.c  practice_4_8_2.c  practice_4_8_3.c  practice_4_8_4.c  practice_4_8_5.c  practice_4_8_6.c  practice_4_8_7.c  practice_4_8_8.c
src/Ch04/review/: review_4_7_3.c  review_4_7_4.c  review_4_7_5.c
src/Ch05/practice/: practice_5_11_3.c  practice_5_11_9.c
src/Ch05/review/: review_5_10_4.c  review_5_10_6.c  review_5_10_8.c  review_5_10_9.c
src/Ch06/: postage.c  scores_in.c
src/Ch06/practice/: practice_6_16_1.c  practice_6_16_2.c  practice_6_16_3.c  practice_6_16_4.c  practice_6_16_5.c  practice_6_16_7.c
src/Ch07/practice/: practice_7_12_1.c  practice_7_12_6.c
src/Ch07/review/: review_7_11_5.c
src/Ch08/practice/: practice_8_11_1.c  practice_8_11_2.c  practice_8_11_4.c  practice_8_11_5.c
src/Ch09/: loccheck.c  swap3.c
src/Ch09/practice/: practice_9_11_1.c  practice_9_11_2.c  practice_9_11_3.c  practice_9_11_4.c  practice_9_11_9.c
src/Ch09/review/: review_9_10_6.c  review_9_10_8.c  review_9_10_9.c
src/Ch10/: test.c
